[package]
name = "blockchaintree"
version = "0.1.0"
authors = ["DoctorEenot <dreenot@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
byteorder = "1.2.7"
colored = ">=2"
env_logger = "0.9.0"
error-stack = "0.4.1"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
num-bigint = "0.4"
num-traits = "0.2"
rsa = "0.5"
secp256k1 = { version = "0.28.1", features = ["rand-std"] }
sha2 = "0.9.5"
sled = "0.34.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
zstd = "0.9"
primitive-types = "0.12.2"
async-trait = "0.1.79"

[dev-dependencies]
rand = "0.8.5"

[profile.test]
opt-level = 3
