[package]
name = "blockchaintree"
version = "0.1.0"
authors = ["DoctorEenot <dreenot@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
byteorder = "1.5.0"
colored = "2.1.0"
env_logger = "0.11.3"
error-stack = "0.4.1"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.21"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rsa = "0.9.6"
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
sha2 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
zstd = "0.13.1"
primitive-types = "0.12.2"
async-trait = "0.1.80"
parking_lot = "0.12.2"

[dev-dependencies]
rand = "0.8.5"

[profile.test]
opt-level = 3
